--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^5.1.1",
+    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "knex": "^3.1.0",
+    "mocha": "^10.4.0",
     "nodemon": "^3.1.1",
     "pg": "^8.11.5"
   }
