add　エンドポイント　Get items Get aitems/:id
Co-authored-by: ngtnok <ngtnok@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "greenfield-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "makeMigration": "knex migrate:make",
     "migrate": "knex migrate:latest",
     "seed-data": "knex seed:run",
@@ -15,10 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^5.1.1",
+    "chai": "^4.1.1",
     "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
     "express": "^4.19.2",
     "knex": "^3.1.0",
     "mocha": "^10.4.0",
