--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "mocha",
     "makeMigration": "knex migrate:make",
     "migrate": "knex migrate:latest",
     "seed-data": "knex seed:run",
-    "makeSeed": "knex seed:make"
+    "makeSeed": "knex seed:make",
+    "migration": "npx knex migrate:latest",
+    "seed": "npx knex seed:run",
+    "vite-install": "npm install --prefix ./frontend",
+    "vite-build": "npm run build --prefix ./frontend",
+    "build": "npm install && npm run migration && npm run seed && npm run vite-install && npm run vite-build",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
