--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "makeSeed": "knex seed:make",
     "migration": "npx knex migrate:latest",
     "seed": "npx knex seed:run",
-    "vite-install": "npm install --prefix ./frontend",
+    "vite-install": "npm install --production=false --prefix ./frontend",
     "vite-build": "npm run build --prefix ./frontend",
     "build": "npm install && npm run migration && npm run seed && npm run vite-install && npm run vite-build",
     "start": "node server.js"
