--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "chai": "^4.1.1",
     "chai-http": "^4.4.0",
     "cors": "^2.8.5",
@@ -29,6 +31,8 @@
     "knex": "^3.1.0",
     "mocha": "^10.4.0",
     "nodemon": "^3.1.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5"
   }
 }
