--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.5.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
