--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "knex": "^3.1.0",
     "mocha": "^10.4.0",
     "nodemon": "^3.1.1",
