--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "esm": "^3.2.25",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "hbs": "^4.2.0",
     "knex": "^3.1.0",
     "mocha": "^10.4.0",
     "nodemon": "^3.1.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5"
   }
 }
