--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "nodemon": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
