--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "greenfield-project",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "test": "mocha",
-    "makeMigration": "knex migrate:make",
-    "migrate": "knex migrate:latest",
-    "seed-data": "knex seed:run",
-    "makeSeed": "knex seed:make",
-    "migration": "npx knex migrate:latest",
-    "seed": "npx knex seed:run",
-    "vite-install": "npm install --production=false --prefix ./frontend",
-    "vite-build": "npm run build --prefix ./frontend",
-    "build": "npm install && npm run migration && npm run vite-install && npm run vite-build",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chai": "^4.1.1",
-    "chai-http": "^4.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "esm": "^3.2.25",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "hbs": "^4.2.0",
-    "knex": "^3.1.0",
-    "mocha": "^10.4.0",
-    "nodemon": "^3.1.1",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-local": "^1.0.0",
-    "pg": "^8.11.5"
-  }
+    "name": "greenfield-project",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "dev": "nodemon server.js",
+        "test": "mocha",
+        "makeMigration": "knex migrate:make",
+        "migrate": "knex migrate:latest",
+        "seed-data": "knex seed:run",
+        "makeSeed": "knex seed:make",
+        "migration": "npx knex migrate:latest",
+        "seed": "npx knex seed:run",
+        "vite-install": "npm install --production=false --prefix ./frontend",
+        "vite-build": "npm run build --prefix ./frontend",
+        "build": "npm install && npm run migration && npm run seed && npm run vite-install && npm run vite-build",
+        "start": "node server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "chai": "^4.1.1",
+        "chai-http": "^4.4.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
+        "esm": "^3.2.25",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "hbs": "^4.2.0",
+        "knex": "^3.1.0",
+        "mocha": "^10.4.0",
+        "nodemon": "^3.1.1",
+        "passport": "^0.7.0",
+        "passport-github2": "^0.1.12",
+        "passport-local": "^1.0.0",
+        "pg": "^8.11.5"
+    }
 }
