--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "seed": "npx knex seed:run",
         "vite-install": "npm install --production=false --prefix ./frontend",
         "vite-build": "npm run build --prefix ./frontend",
-        "build": "npm install && npm run migration && npm run seed && npm run vite-install && npm run vite-build",
+        "build": "npm install && npm run migration && npm run vite-install && npm run vite-build",
         "start": "node server.js"
     },
     "keywords": [],
